# dbx-sync

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml  test-release.yml
src/dbx_sync/: __init__.py  cli.py  sync.py
tests/: test_cli.py  test_sync.py
